# rdk-xr-speech-avs-sdk

./: CONTRIBUTING.md  NOTICE
xr-speech-avs/: AVS.cpp  AVS.h  CMakeLists.txt
xr-speech-avs/Impl/: CompatibleAudioFormat.h  ThunderInputManager.cpp  ThunderInputManager.h  ThunderLogger.cpp  ThunderLogger.h  ThunderVoiceHandler.h
xr-speech-avs/Impl/SmartScreen/: SmartScreen.cpp  SmartScreen.h
xr-speech-avs/Integration/: CMakeLists.txt
xr-speech-avs/Integration/rpi3/: AlexaClientSDKConfig.json  SmartScreenSDKConfig.json
xr-speech-avs/avs_sdt/: avs_sdt.c  avs_sdt.h  avs_sdt_private.h
xr-speech-avs/cmake/: FindGStreamer.cmake
